--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,29 @@
+<!-- views/index.ejs -->
 <!doctype html>
-<html lang='en'>
+<html>
 <head>
-<title>Chat</title>
-<link rel='stylesheet' href='/stylesheets/style.css'></link>
+    <title>Node Authentication</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <style>
+        body        { padding-top:80px; }
+    </style>
 </head>
 <body>
-<div id='content'>
-<div id='room'></div>
-<div id='room-list'></div>
-<div id='messages'></div>
-<form id='send-form'>
-<input id='send-message' />
-<input id='send-button' type='submit' value='Send'/>
-<div id='help'>
-Chat commands:
-<ul>
-<li>Change nickname: <code>/nick [username]</code></li>
-<li>Join/create room: <code>/join [room name]</code></li>
-</ul>
+<div class="container">
+
+    <div class="jumbotron text-center">
+        <h1><span class="fa fa-lock"></span> Node Authentication</h1>
+
+        <p>Login or Register with:</p>
+        
+        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
+        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
+        <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
+        <a href="/auth/twitter" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
+        <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
+    </div>
+
 </div>
-</form>
-</div>
-<script src='/socket.io/socket.io.js' type='text/javascript'></script>
-<script src='/javascripts/jquery-1.7.2.min.js' type='text/javascript'></script>
-<script src='/javascripts/chat.js' type='text/javascript'></script>
-<script src='/javascripts/chat_ui.js' type='text/javascript'></script>
 </body>
 </html>
